Add new feature to process user input
Implemented a function to handle and validate user input in the main application module. This improves input reliability and prepares the codebase for future enhancements.

--- a/content/docs/getting-started/configuration.mdx
+++ b/content/docs/getting-started/configuration.mdx
@@ -668,16 +668,16 @@ elizaos publish
 ## Next Steps
 
 <Cards>
-  <Card title="Core Concepts" href="/docs/core-concepts" icon="🧠">
+  <Card title="Core Concepts" href="/docs/core-concepts">
     Learn about ElizaOS architecture and concepts
   </Card>
-  <Card title="Plugin Development" href="/docs/plugins/creating-plugins" icon="🔧">
+  <Card title="Plugin Development" href="/docs/plugins/creating-plugins">
     Build your own plugins for ElizaOS
   </Card>
-  <Card title="Advanced Features" href="/docs/advanced" icon="🚀">
+  <Card title="Advanced Features" href="/docs/advanced">
     Explore advanced ElizaOS features
   </Card>
-  <Card title="Deployment" href="/docs/advanced/deployment" icon="📦">
+  <Card title="Deployment" href="/docs/advanced/deployment">
     Deploy your agents to production
   </Card>
 </Cards>
