--- a/content/docs/getting-started/index.mdx
+++ b/content/docs/getting-started/index.mdx
@@ -10,16 +10,16 @@ powerful framework for building multi-agent systems with support for Discord, Te
 many more platforms.
 
 <Cards>
-  <Card title="Quick Start" href="/docs/getting-started/quickstart" icon="🚀">
+  <Card title="Quick Start" href="/docs/getting-started/quickstart">
     Create your first agent in under 5 minutes
   </Card>
-  <Card title="Installation" href="/docs/getting-started/installation" icon="📦">
+  <Card title="Installation" href="/docs/getting-started/installation">
     Detailed installation instructions and setup
   </Card>
-  <Card title="Configuration" href="/docs/getting-started/configuration" icon="⚙️">
+  <Card title="Configuration" href="/docs/getting-started/configuration">
     Configure your agent's personality and connections
   </Card>
-  <Card title="Core Concepts" href="/docs/core-concepts" icon="🧠">
+  <Card title="Core Concepts" href="/docs/core-concepts">
     Learn about agents, actions, and providers
   </Card>
 </Cards>
@@ -85,16 +85,16 @@ Before you begin, ensure you have:
 ElizaOS v1.2.0 introduces different project types for various use cases:
 
 <Cards>
-  <Card title="Project" href="/docs/getting-started/quickstart" icon="🚀">
+  <Card title="Project" href="/docs/getting-started/quickstart">
     Full ElizaOS application with all features - perfect for complete agent solutions
   </Card>
-  <Card title="Plugin" href="/docs/plugins/creating-plugins" icon="🔌">
+  <Card title="Plugin" href="/docs/plugins/creating-plugins">
     Extend ElizaOS with custom functionality - for developers building extensions
   </Card>
-  <Card title="Agent" href="/docs/core-concepts/agent-development/character-definition" icon="🤖">
+  <Card title="Agent" href="/docs/core-concepts/agent-development/character-definition">
     Standalone agent character definition - for simple agent configurations
   </Card>
-  <Card title="TEE" href="/docs/advanced/tee-deployment" icon="🔒">
+  <Card title="TEE" href="/docs/advanced/tee-deployment">
     Trusted Execution Environment deployment - for secure, decentralized agents
   </Card>
 </Cards>
@@ -146,26 +146,25 @@ docker-compose up -d
 Once you've completed the basic setup:
 
 <Cards>
-  <Card title="Create Your First Agent" href="/docs/getting-started/quickstart" icon="🤖">
+  <Card title="Create Your First Agent" href="/docs/getting-started/quickstart">
     Follow the quick start guide to create and run your first agent
   </Card>
-  <Card title="Connect to Platforms" href="/docs/getting-started/configuration" icon="🔗">
+  <Card title="Connect to Platforms" href="/docs/getting-started/configuration">
     Set up Discord, Telegram, or Twitter connections
   </Card>
   <Card
     title="Customize Behavior"
     href="/docs/core-concepts/agent-development/character-definition"
-    icon="🎭"
   >
     Learn how to define your agent's personality and capabilities
   </Card>
-  <Card title="Add Plugins" href="/docs/plugins" icon="🔌">
+  <Card title="Add Plugins" href="/docs/plugins">
     Extend your agent with powerful plugins from the community
   </Card>
-  <Card title="Development Workflow" href="/docs/getting-started/configuration" icon="⚙️">
+  <Card title="Development Workflow" href="/docs/getting-started/configuration">
     Learn about development commands and best practices
   </Card>
-  <Card title="Testing & Deployment" href="/docs/advanced/deployment" icon="🚀">
+  <Card title="Testing & Deployment" href="/docs/advanced/deployment">
     Test your agent and deploy to production
   </Card>
 </Cards>
