--- a/content/docs/getting-started/quickstart.mdx
+++ b/content/docs/getting-started/quickstart.mdx
@@ -145,26 +145,25 @@ elizaos env list
 Now that your agent is running, you can:
 
 <Cards>
-  <Card title="Add Plugins" href="/docs/plugins" icon="🔌">
+  <Card title="Add Plugins" href="/docs/plugins">
     Extend your agent with community plugins using `elizaos plugins add`
   </Card>
-  <Card title="Connect to Discord" href="/docs/core-concepts/communication" icon="🔗">
+  <Card title="Connect to Discord" href="/docs/core-concepts/communication">
     Set up Discord integration for your agent
   </Card>
   <Card
     title="Customize Personality"
     href="/docs/core-concepts/agent-development/character-definition"
-    icon="🎭"
   >
     Define your agent's personality and behavior
   </Card>
-  <Card title="Development Workflow" href="/docs/getting-started/configuration" icon="⚙️">
+  <Card title="Development Workflow" href="/docs/getting-started/configuration">
     Learn about dev mode, testing, and deployment
   </Card>
-  <Card title="Deploy to Production" href="/docs/advanced/deployment" icon="🚀">
+  <Card title="Deploy to Production" href="/docs/advanced/deployment">
     Make your agent available 24/7
   </Card>
-  <Card title="TEE Deployment" href="/docs/advanced/tee-deployment" icon="🔒">
+  <Card title="TEE Deployment" href="/docs/advanced/tee-deployment">
     Deploy to Trusted Execution Environment
   </Card>
 </Cards>
@@ -241,15 +240,15 @@ elizaos plugins remove @elizaos/plugin-discord
 
 ---
 
-🎉 **Congratulations!** You've successfully created your first AI agent with ElizaOS v1.2.0.
+**Congratulations!** You've successfully created your first AI agent with ElizaOS v1.2.0.
 
 ### What You've Accomplished
 
-- ✅ Installed the ElizaOS CLI
-- ✅ Created a new agent project
-- ✅ Configured environment variables
-- ✅ Started your first agent
-- ✅ Tested basic functionality
+- Installed the ElizaOS CLI
+- Created a new agent project
+- Configured environment variables
+- Started your first agent
+- Tested basic functionality
 
 ### Ready for More?
 
