--- a/content/docs/learning-tracks/simple/getting-started/quick-start.mdx
+++ b/content/docs/learning-tracks/simple/getting-started/quick-start.mdx
@@ -5,7 +5,7 @@ description: Create your first AI agent in 5 minutes
 
 ## Quick Start Guide
 
-🚀 **Create your first AI agent in 5 minutes**
+**Create your first AI agent in 5 minutes**
 
 This guide will walk you through creating and deploying your first ElizaOS agent. No coding
 experience required!
@@ -177,5 +177,5 @@ Now that you have a working agent, explore:
 
 ---
 
-🎉 **Congratulations!** You've created your first AI agent with ElizaOS. The possibilities are
+**Congratulations!** You've created your first AI agent with ElizaOS. The possibilities are
 endless - what will you build next?
