--- a/content/docs/learning-tracks/simple/guides/deployment-guide.mdx
+++ b/content/docs/learning-tracks/simple/guides/deployment-guide.mdx
@@ -771,4 +771,4 @@ After successful deployment:
 5. **Security Updates**: Keep systems updated
 6. **Documentation**: Document your deployment process
 
-Your ElizaOS agent is now live and ready to serve users! 🚀
+Your ElizaOS agent is now live and ready to serve users!
