--- a/content/docs/learning-tracks/simple/guides/quickstart-comprehensive.mdx
+++ b/content/docs/learning-tracks/simple/guides/quickstart-comprehensive.mdx
@@ -31,15 +31,15 @@ git --version     # Any recent version
 
 ElizaOS offers different approaches based on your needs:
 
-### 🚀 Path 1: Standalone Agent (Recommended for Beginners)
+### Path 1: Standalone Agent (Recommended for Beginners)
 
 **Best for:** Single agent, quick deployment, learning **Time:** 5-10 minutes
 
-### 🔧 Path 2: Plugin Development
+### Path 2: Plugin Development
 
 **Best for:** Building reusable components, extending ElizaOS **Time:** 15-20 minutes
 
-### 🏗️ Path 3: Monorepo Development
+### Path 3: Monorepo Development
 
 **Best for:** Multiple agents, core contributions, advanced features **Time:** 30+ minutes
 
@@ -146,7 +146,7 @@ elizaos dev
 elizaos start
 ```
 
-Your agent is now running! 🎉
+Your agent is now running!
 
 ### Step 6: Test Your Agent
 
@@ -508,4 +508,4 @@ If you're stuck:
 3. **GitHub Issues**: Report bugs or request features
 4. **Examples**: Look at working examples for reference
 
-Welcome to ElizaOS! 🚀 Your AI agent journey starts here.
+Welcome to ElizaOS! Your AI agent journey starts here.
