--- a/content/docs/learning-tracks/simple/guides/troubleshooting-guide.mdx
+++ b/content/docs/learning-tracks/simple/guides/troubleshooting-guide.mdx
@@ -905,4 +905,4 @@ Include:
 5. **Document your changes**
 
 This troubleshooting guide should help you resolve most common issues. If you encounter something
-not covered here, please contribute to the documentation or ask for help in the community! 🚀
+not covered here, please contribute to the documentation or ask for help in the community!
