--- a/content/docs/learning-tracks/simple/index.mdx
+++ b/content/docs/learning-tracks/simple/index.mdx
@@ -18,11 +18,11 @@ agent in just a few hours. No complex setup, no deep dives - just practical, han
 
 By the end of this track, you'll have:
 
-- ✅ A working ElizaOS development environment
-- ✅ A custom agent with personality and knowledge
-- ✅ Basic understanding of plugins and actions
-- ✅ An agent deployed to Discord or Telegram
-- ✅ Confidence to explore more advanced features
+- A working ElizaOS development environment
+- A custom agent with personality and knowledge
+- Basic understanding of plugins and actions
+- An agent deployed to Discord or Telegram
+- Confidence to explore more advanced features
 
 ## Learning Modules
 
@@ -58,19 +58,19 @@ By the end of this track, you'll have:
 
 ## Track Features
 
-### 🎯 Focused Learning
+### Focused Learning
 
 Each module has a specific goal and builds on the previous one.
 
-### 📋 Copy-Paste Ready
+### Copy-Paste Ready
 
 All code examples are ready to use - no modifications needed.
 
-### 🔧 Practical Examples
+### Practical Examples
 
 Real-world scenarios and use cases throughout.
 
-### ✅ Progress Tracking
+### Progress Tracking
 
 Clear checkpoints to measure your progress.
 
