--- a/content/docs/learning-tracks/simple/intro.mdx
+++ b/content/docs/learning-tracks/simple/intro.mdx
@@ -5,7 +5,7 @@ description: Get started with ElizaOS the easy way - no coding required
 
 ## Simple Track Introduction
 
-🚀 **Get started with ElizaOS the easy way - no coding required**
+**Get started with ElizaOS the easy way - no coding required**
 
 The Simple Track is designed for creators who want to deploy AI agents without coding. This track
 will get you from zero to a deployed AI agent in just a few minutes.
