--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -16,22 +16,22 @@ infrastructure to bring your AI vision to life.
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
 
-<Card title="🧠 Persistent Memory" href="/docs/core-concepts/data-state/memory-system">
+<Card title="Persistent Memory" href="/docs/core-concepts/data-state/memory-system">
   Advanced memory system with vector embeddings for semantic search, long-term relationship
   tracking, and contextual awareness that persists across conversations.
 </Card>
 
-<Card title="🔌 Plugin Architecture" href="/docs/core-concepts/architecture/plugin-system">
+<Card title="Plugin Architecture" href="/docs/core-concepts/architecture/plugin-system">
   Extensible plugin system supporting custom actions, evaluators, and providers. Build once, deploy
   everywhere with standardized interfaces.
 </Card>
 
-<Card title="🌐 Multi-Platform Support" href="/docs/core-concepts/communication">
+<Card title="Multi-Platform Support" href="/docs/core-concepts/communication">
   Native connectors for Discord, Telegram, Farcaster, and more. Real-time communication with
   WebSockets and REST APIs.
 </Card>
 
-<Card title="🤖 Multi-Agent Systems" href="/docs/core-concepts/agent-development/agents">
+<Card title="Multi-Agent Systems" href="/docs/core-concepts/agent-development/agents">
   Deploy multiple specialized agents that can collaborate, share knowledge, and coordinate complex
   tasks seamlessly.
 </Card>
@@ -40,25 +40,25 @@ infrastructure to bring your AI vision to life.
 
 ## Core Capabilities
 
-### 🚀 **Full-Featured Platform Integrations**
+### **Full-Featured Platform Integrations**
 
 - **Discord, Telegram, Farcaster** - Native connectors with advanced features
 - **Web Interface** - Modern React-based dashboard for agent management
 - **API-First Design** - Complete REST and WebSocket APIs for custom integrations
 
-### 🔄 **Universal Model Support**
+### **Universal Model Support**
 
 - **OpenAI, Anthropic, Google, Ollama** - Unified interface for all major providers
 - **Local Models** - Run models privately with Ollama or custom endpoints
 - **Automatic Failover** - Seamless switching between providers for reliability
 
-### 📚 **Intelligent Document Processing**
+### **Intelligent Document Processing**
 
 - **Multi-Format Support** - PDF, text, web content, and more
 - **Vector Search** - Semantic similarity search across your knowledge base
 - **Real-Time Updates** - Dynamic knowledge ingestion and retrieval
 
-### 🎨 **Character-Driven Development**
+### **Character-Driven Development**
 
 - **JSON-Based Characters** - Define personality, knowledge, and behavior patterns
 - **Style Customization** - Unique voice and communication style for each agent
@@ -68,32 +68,32 @@ infrastructure to bring your AI vision to life.
 
 <div className="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
 
-<Card title="💬 Conversational Agents">
+<Card title="Conversational Agents">
   Create engaging chatbots with persistent memory, personality, and the ability to learn from
   interactions over time.
 </Card>
 
-<Card title="🤖 Autonomous Agents">
+<Card title="Autonomous Agents">
   Build agents that can take actions, make decisions, and operate independently with minimal human
   oversight.
 </Card>
 
-<Card title="📊 Business Automation">
+<Card title="Business Automation">
   Develop process handlers for customer service, data analysis, content generation, and workflow
   automation.
 </Card>
 
-<Card title="🎮 Interactive NPCs">
+<Card title="Interactive NPCs">
   Design game characters with rich personalities, dynamic dialogue, and persistent relationships
   with players.
 </Card>
 
-<Card title="📈 Trading Systems">
+<Card title="Trading Systems">
   Build intelligent trading agents with market analysis, risk management, and automated
   decision-making capabilities.
 </Card>
 
-<Card title="🔧 Custom Solutions">
+<Card title="Custom Solutions">
   Leverage the extensible architecture to create specialized agents for your unique use cases and
   requirements.
 </Card>
@@ -102,19 +102,19 @@ infrastructure to bring your AI vision to life.
 
 ## The ElizaOS Ecosystem
 
-### 🏗️ **Core Framework** (`@elizaos/core`)
+### **Core Framework** (`@elizaos/core`)
 
 The foundation providing runtime management, memory systems, and plugin interfaces.
 
-### 🖥️ **CLI Tools** (`@elizaos/cli`)
+### **CLI Tools** (`@elizaos/cli`)
 
 Powerful command-line tools for project creation, agent management, and development workflows.
 
-### 🌐 **Web Client** (`@elizaos/client`)
+### **Web Client** (`@elizaos/client`)
 
 Modern React-based interface for agent management, real-time chat, and system monitoring.
 
-### 🔌 **Plugin System**
+### **Plugin System**
 
 Extensive collection of plugins for platforms, models, and specialized functionality:
 
@@ -122,7 +122,7 @@ Extensive collection of plugins for platforms, models, and specialized functiona
 - **Model Plugins** - OpenAI, Anthropic, Google, Ollama, and local providers
 - **Service Plugins** - Database adapters, file processing, and external APIs
 
-### 📱 **Cross-Platform Apps**
+### **Cross-Platform Apps**
 
 Native desktop and mobile applications built with Tauri for seamless agent interaction.
 
@@ -130,19 +130,19 @@ Native desktop and mobile applications built with Tauri for seamless agent inter
 
 <div className="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
 
-<Card title="🚀 Quick Start" href="/docs/getting-started/quickstart">
+<Card title="Quick Start" href="/docs/getting-started/quickstart">
   Get your first agent running in minutes with our step-by-step guide and CLI tools.
 </Card>
 
-<Card title="💡 Learning Tracks" href="/docs/learning-tracks">
+<Card title="Learning Tracks" href="/docs/learning-tracks">
   Structured learning paths from beginner to advanced, with hands-on projects and examples.
 </Card>
 
-<Card title="🏗️ Core Concepts" href="/docs/core-concepts">
+<Card title="Core Concepts" href="/docs/core-concepts">
   Deep dive into the architecture, components, and patterns that power ElizaOS.
 </Card>
 
-<Card title="🔧 Plugin Development" href="/docs/plugins">
+<Card title="Plugin Development" href="/docs/plugins">
   Learn to build custom plugins and extend ElizaOS with your own functionality.
 </Card>
 
