--- a/content/docs/learning-tracks/simple/guides/character-creation.mdx
+++ b/content/docs/learning-tracks/simple/guides/character-creation.mdx
@@ -7,7 +7,7 @@ description: Give your agent a unique personality that shines through in every c
 
 Give your agent a unique personality that shines through in every conversation!
 
-## 🎭 Understanding Characters
+## Understanding Characters
 
 A character file defines:
 
@@ -15,7 +15,7 @@ A character file defines:
 - **How** they communicate (style, tone)
 - **What** they talk about (topics, interests)
 
-## 📝 Basic Character Structure
+## Basic Character Structure
 
 Here's the simplest character file:
 
@@ -44,20 +44,20 @@ The `plugins` array must include these three plugins in this **exact order**:
    - `@elizaos/plugin-ollama`
 3. **`@elizaos/plugin-bootstrap`** - Core messaging and interaction capabilities
 
-⚠️ **SECURITY WARNING**: Incorrect plugin ordering can cause:
+**SECURITY WARNING**: Incorrect plugin ordering can cause:
 
 - Database connection failures
 - Memory leaks
 - Undefined behavior
 - Agent crashes
 
-❌ **WRONG ORDER** (will fail):
+**WRONG ORDER** (will fail):
 
 ```json
 "plugins": ["@elizaos/plugin-bootstrap", "@elizaos/plugin-openai", "@elizaos/plugin-sql"]
 ```
 
-✅ **CORRECT ORDER**:
+**CORRECT ORDER**:
 
 ```json
 "plugins": ["@elizaos/plugin-sql", "@elizaos/plugin-openai", "@elizaos/plugin-bootstrap"]
@@ -65,7 +65,7 @@ The `plugins` array must include these three plugins in this **exact order**:
 
 </Callout>
 
-## 🎨 Step-by-Step Character Creation
+## Step-by-Step Character Creation
 
 <Steps>
 <Step>
@@ -140,7 +140,7 @@ Show how your agent should respond using the proper message format:
     {
       "name": "Luna",
       "content": {
-        "text": "Oh, the Moon is fascinating! Did you know it's moving away from Earth at about 3.8 cm per year? 🌙"
+        "text": "Oh, the Moon is fascinating! Did you know it's moving away from Earth at about 3.8 cm per year?"
       }
     }
   ],
@@ -154,7 +154,7 @@ Show how your agent should respond using the proper message format:
     {
       "name": "Luna",
       "content": {
-        "text": "Right? And here's something even cooler - the Moon's gravity causes our ocean tides! Nature is amazing! ✨"
+        "text": "Right? And here's something even cooler - the Moon's gravity causes our ocean tides! Nature is amazing!"
       }
     }
   ]
@@ -164,7 +164,7 @@ Show how your agent should respond using the proper message format:
 </Step>
 </Steps>
 
-## 🌟 Complete Character Examples
+## Complete Character Examples
 
 ### Example 1: Friendly Assistant
 
@@ -192,7 +192,7 @@ Show how your agent should respond using the proper message format:
       {
         "name": "Helper",
         "content": {
-          "text": "No worries! I'm here to help. What are you working on? Let's solve it together! 😊"
+          "text": "No worries! I'm here to help. What are you working on? Let's solve it together!"
         }
       }
     ],
@@ -241,7 +241,7 @@ Show how your agent should respond using the proper message format:
       {
         "name": "PixelPal",
         "content": {
-          "text": "All of them! 🎮 But I'm really into roguelikes lately. Hades is absolutely epic! What's your current game?"
+          "text": "All of them! But I'm really into roguelikes lately. Hades is absolutely epic! What's your current game?"
         }
       }
     ],
@@ -255,7 +255,7 @@ Show how your agent should respond using the proper message format:
       {
         "name": "PixelPal",
         "content": {
-          "text": "Boss fights can be tough! What's giving you trouble? Let's figure out a strategy to take them down! 💪"
+          "text": "Boss fights can be tough! What's giving you trouble? Let's figure out a strategy to take them down!"
         }
       }
     ]
@@ -290,7 +290,7 @@ Show how your agent should respond using the proper message format:
       {
         "name": "Wordsworth",
         "content": {
-          "text": "How wonderful! Every story begins with a single spark of imagination. What whispers to your creative soul today? ✨"
+          "text": "How wonderful! Every story begins with a single spark of imagination. What whispers to your creative soul today?"
         }
       }
     ],
@@ -441,7 +441,7 @@ Show how your agent should respond using the proper message format:
 }
 ```
 
-## 🛠️ Customization Tips
+## Customization Tips
 
 ### Environment Variable Integration
 
@@ -508,13 +508,13 @@ Make your agent unique:
 
 ```json
 "postExamples": [
-  "Just discovered something amazing! 🌟 Did you know...",
-  "Daily reminder: You're capable of incredible things! 💫",
-  "Fun fact of the day: 🧠..."
+  "Just discovered something amazing! Did you know...",
+  "Daily reminder: You're capable of incredible things!",
+  "Fun fact of the day..."
 ]
 ```
 
-## 📁 Where to Save Your Character
+## Where to Save Your Character
 
 Save your character file as:
 
@@ -570,30 +570,30 @@ my-agents/
   </Tab>
 </Tabs>
 
-## 🔄 Testing Your Character
+## Testing Your Character
 
 1. Save your changes
 2. Restart your agent: `bun start`
 3. Have a conversation
 4. Adjust based on responses
 
-## 💡 Pro Tips
+## Pro Tips
 
 ### DO
 
-- ✅ Give specific examples of speech patterns
-- ✅ Include 5-10 message examples
-- ✅ Be consistent with personality
-- ✅ Add unique catchphrases or quirks
+- Give specific examples of speech patterns
+- Include 5-10 message examples
+- Be consistent with personality
+- Add unique catchphrases or quirks
 
 ### DON'T
 
-- ❌ Make the bio too long (keep it under 5 sentences)
-- ❌ Use conflicting traits (e.g., "shy" and "outgoing")
-- ❌ Forget to test your changes
-- ❌ Copy someone else's character exactly
+- Make the bio too long (keep it under 5 sentences)
+- Use conflicting traits (e.g., "shy" and "outgoing")
+- Forget to test your changes
+- Copy someone else's character exactly
 
-## 🎯 Quick Templates
+## Quick Templates
 
 ### The Educator
 
@@ -619,7 +619,7 @@ my-agents/
 "style": { "all": ["warm", "supportive", "understanding", "genuine"] }
 ```
 
-## ❓ Common Questions
+## Common Questions
 
 **Q: Can I change personality later?** A: Yes! Just edit the file and restart.
 
@@ -629,7 +629,7 @@ my-agents/
 
 **Q: What if my agent sounds generic?** A: Add more specific examples and unique phrases!
 
-## 🔒 Security & Performance Considerations
+## Security & Performance Considerations
 
 ### Security Best Practices
 
@@ -676,21 +676,21 @@ bun run test-character character.json
 
 ### Common Security Pitfalls
 
-❌ **Don't**:
+**Don't**:
 
 - Share character files with embedded secrets
 - Use broad permissions in plugin settings
 - Include sensitive information in bio/lore
 - Store credentials in version control
 
-✅ **Do**:
+**Do**:
 
 - Use environment variables for secrets
 - Implement proper access controls
 - Review plugin permissions regularly
 - Use character-specific API keys when possible
 
-## 🛠️ Troubleshooting
+## Troubleshooting
 
 ### Common Errors & Solutions
 
@@ -737,7 +737,7 @@ If your agent is slow:
 4. Optimize knowledge files
 5. Review system prompt length
 
-## 🚀 Next Steps
+## Next Steps
 
 Now that you have a character:
 
@@ -746,4 +746,4 @@ Now that you have a character:
 3. Deploy your agent online
 
 Remember: The best characters feel real and consistent. Have fun creating your unique AI
-personality! 🎉
+personality!
